--- a/ggRevitDynamo2016/ggRevitDynamoIFC2016.csproj
+++ b/ggRevitDynamo2016/ggRevitDynamoIFC2016.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4D934A8E-E32E-4258-BB3A-6DBAE2657CB7}</ProjectGuid>
+    <ProjectGuid>{33979FA5-126C-45AA-9A34-3DAF2EA2BCFB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>ggDynamoIFC</RootNamespace>
-    <AssemblyName>ggDynamoIFC2018</AssemblyName>
+    <AssemblyName>ggDynamoIFC2016</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;v2018</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;v2016</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -37,22 +37,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DynamoServices">
-      <HintPath>C:\Program Files\Dynamo\Dynamo Core\1.3\DynamoServices.dll</HintPath>
+      <HintPath>C:\Program Files\Dynamo\Dynamo Core\1.2\DynamoServices.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="ggRevitIFC2018">
-      <HintPath>c:\Program Files\Geometry Gym\Revit\ggRevitIFC2018.dll</HintPath>
+    <Reference Include="ggRevitIFC2016">
+      <HintPath>C:\Program Files\Geometry Gym\Revit\ggRevitIFC2016.dll</HintPath>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2018\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2016\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2018\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2016\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitServices">
-      <HintPath>C:\Program Files\Dynamo\Dynamo Revit\1.3\Revit_2018\RevitServices.dll</HintPath>
+      <HintPath>C:\Program Files\Dynamo\Dynamo Revit\1.2\Revit_2016\RevitServices.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -65,11 +65,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ggRevitDynamoIFC.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\ggRevitDynamoIFC\ggRevitDynamoIFC.cs">
+      <Link>ggRevitDynamoIFC.cs</Link>
+    </Compile>
+    <Compile Include="..\ggRevitDynamoIFC\Properties\AssemblyInfo.cs">
+      <Link>AssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
